examples/test/testpolicy6426.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6426
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key3: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value17
          key6: value32
      podSelector:
        matchLabels:
          key41: value13
          key49: value23
          key36: value15
